bad/sub_invalid_types_class_null.example_compiler_output
ERROR
[1mbad/sub_invalid_types_class_null.lat:6:4: [1;31merror: [0;1msubtraction is defined only for int values, not `X` and `null`[m
	x - null;
	  [1;32m^[m
